Process_Management/force-app/main/default/objects/Stream__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Streams</relationshipLabel>
        <relationshipName>Streams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JSON_Description__c</fullName>
        <label>JSON Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Jobs_Done__c</fullName>
        <label>Number Of Jobs Done</label>
        <summaryFilterItems>
            <field>Job__c.Status__c</field>
            <operation>equals</operation>
            <value>DONE</value>
        </summaryFilterItems>
        <summaryForeignKey>Job__c.Stream__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Jobs_To_Do__c</fullName>
        <label>Number Of Jobs To Do</label>
        <summaryFilterItems>
            <field>Job__c.Status__c</field>
            <operation>equals</operation>
            <value>TO DO</value>
        </summaryFilterItems>
        <summaryForeignKey>Job__c.Stream__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Jobs__c</fullName>
        <label>Number Of Jobs</label>
        <summaryForeignKey>Job__c.Stream__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <formula>IF(Number_Of_Jobs__c &lt;&gt; 0,Number_Of_Jobs_Done__c/Number_Of_Jobs__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(
				Number_Of_Jobs_To_Do__c = Number_Of_Jobs__c, 
				&apos;TO DO&apos;,
				IF(Number_Of_Jobs_To_Do__c = Number_Of_Jobs_Done__c,
						&apos;DONE&apos;,
						&apos;IN PROGRESS&apos;
				)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Planned__c</fullName>
        <label>Time Planned (h)</label>
        <summarizedField>Job__c.Time_Planned__c</summarizedField>
        <summaryForeignKey>Job__c.Stream__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <label>Time Spent (h)</label>
        <summarizedField>Job__c.Time_Spent__c</summarizedField>
        <summaryForeignKey>Job__c.Stream__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Stream</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stream Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Streams</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Template</fullName>
        <active>true</active>
        <label>Standard Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>